Fixing text overflow in code examples - second approach.

--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ pre {
 }
 
 code {
-    overflow-x: hidden;
+    overflow-x: scroll;
     display: block;
 }
 
